add product filtration